--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
     <main>
       <!-- Loads the specified .html file -->
+      <load src="./partials/home-block-2.html" />
       <load src="./partials/vite-promo.html" />
       <load src="./partials/badges.html" />
     </main>
