[WiP] mobile layout ready

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <load src="partials/header.html" />
     <main>
       <load src="partials/sct-hero.html" />
+      <load src="partials/home-block-2.html" />
       <load src="partials/sct-exercises.html" />
       <load src="partials/sct-qfd.html" />
     </main>
