--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,7 @@
     </main>
     <load src="partials/footer.html" />
     <load src="partials/mobile-menu.html" />
+
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
