--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <load src="partials/head.html" />
+    <script type="module" src="./main.js" defer></script>
   </head>
   <body>
     <load src="partials/header.html" />
     <main>
       <load src="partials/sct-hero.html" />
       <load src="partials/sct-exercises.html" />
-      <load src="partials/sct-qfd.html" />      
+      <load src="partials/sct-qfd.html" />
     </main>
     <load src="partials/footer.html" />
     <load src="partials/mobile-menu.html" />
