--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     </main>
     <load src="partials/footer.html" />
     <load src="partials/mobile-menu.html" />
+    <load src="partials/quote-of-day.html" />
 
   </body>
 </html>
