added .container to all in index, fixed .container padding and footer.container margin-top

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <load src="partials/header.html" />
-    <main>
+    <main class="container">
       <load src="partials/sct-hero.html" />
       <load src="partials/sct-exercises.html" />
       <load src="partials/sct-qfd.html" />
