refactoring footer and favorites conflict

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <load src="partials/head.html" />
+    <script type="module" src="./js/favorites.js"></script>
   </head>
   <body>
     <load src="partials/header.html" />
