--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <load src="partials/head.html" />
+    <script type="module" src="./js/footer.js"></script>
   </head>
   <body>
     <load src="partials/header.html" />
@@ -12,6 +13,5 @@
     </main>
     <load src="partials/footer.html" />
     <load src="partials/mobile-menu.html" />
-
   </body>
 </html>
