button scroll to top added

--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,10 @@
     </main>
     <load src="partials/footer.html" />
     <load src="partials/mobile-menu.html" />
+    <button id="scrollToTop" class="scroll-to-top">
+        <svg width="13" height="13"  viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
+            <use href="./img/icons.svg#icon-arrow-top"></use>
+        </svg>
+    </button>
   </body>
 </html>
