added partial for scrall to top button

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -10,5 +10,6 @@
       <load src="partials/sct-favorites.html" />
     </main>
     <load src="partials/mobile-menu.html" />
+    <load src="partials/scroll-to-top.html" />
   </body>
 </html>
