--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,6 @@
     </main>
     <load src="partials/footer.html" />
     <load src="partials/mobile-menu.html" />
-    <button id="scrollToTop" class="scroll-to-top">
-        <svg width="13" height="13"  viewBox="0 0 13 13" xmlns="http://www.w3.org/2000/svg">
-            <use href="./img/icons.svg#icon-arrow-top"></use>
-        </svg>
-    </button>
+    <load src="partials/scroll-to-top.html" />
   </body>
 </html>
