fixed W3C errors and warnings

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <load src="partials/header.html" />
-    <main>
+    <main class="container">
       <load src="partials/sct-favorites.html" />
     </main>
     <load src="partials/mobile-menu.html" />
