--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <load src="partials/header.html" />
-    <main>
+    <main class="main">
       <load src="partials/sct-hero.html" />
       <load src="partials/sct-exercises.html" />
       <load src="partials/sct-qfd.html" />
