--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,9 @@
   </head>
   <body>
     <load src="partials/header.html" />
-    <main class="main">
+    <main>
       <load src="partials/sct-hero.html" />
       <load src="partials/sct-exercises.html" />
-      <load src="partials/sct-qfd.html" />
     </main>
     <load src="partials/footer.html" />
     <load src="partials/scroll-to-top.html" />
